[MT-1846] Add missing 'Platform' imports to modules and remote commands (#196)
* remove excessive definitions of configure method

* add Platform imports, update dependencies versions

* update CHANGELOG.md

* update versions of adobe-visitor and facebook

* add versions to build.gradle of Appsflyer and Facebook

* remove excessive versionCode and versionName properties

--- a/remotecommands/tealium-react-appsflyer/android/build.gradle
+++ b/remotecommands/tealium-react-appsflyer/android/build.gradle
@@ -37,12 +37,17 @@ buildscript {
   }
 }
 
+version = "1.2.2"
 android {
   compileSdkVersion safeExtGet("compileSdkVersion", DEFAULT_COMPILE_SDK_VERSION)
-
+  buildToolsVersion safeExtGet('buildToolsVersion', DEFAULT_BUILD_TOOLS_VERSION)
   defaultConfig {
     minSdkVersion safeExtGet("minSdkVersion", DEFAULT_MIN_SDK_VERSION)
     targetSdkVersion safeExtGet("targetSdkVersion", DEFAULT_TARGET_SDK_VERSION)
+
+    buildConfigField "String", "TAG", "\"Tealium-React-Appsflyer-$version\""
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
     release {
