--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-native": "0.78.0",
+    "react": "19.1.1",
+    "react-native": "^0.82.0",
     "react-native-permissions": "^3.6.1",
     "react-native-svg-transformer": "^1.5.0",
     "tealium-react-adjust": "../remotecommands/tealium-react-adjust",
@@ -29,20 +29,20 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.78.0",
+    "@react-native-community/cli": "^20.0.0",
+    "@react-native-community/cli-platform-android": "^20.0.0",
+    "@react-native-community/cli-platform-ios": "^20.0.0",
+    "@react-native/babel-preset": "^0.82.0",
     "@react-native/eslint-config": "0.78.0",
-    "@react-native/metro-config": "0.78.0",
+    "@react-native/metro-config": "^0.82.0",
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.2.1",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
+    "react-test-renderer": "19.1.1",
     "typescript": "5.0.4"
   },
   "engines": {
