--- a/remotecommands/tealium-react-appsflyer/package.json
+++ b/remotecommands/tealium-react-appsflyer/package.json
@@ -7,6 +7,7 @@
   "files": [
     "README.md",
     "android",
+    "!android/build",
     "index.js",
     "ios",
     "tealium-react-appsflyer.podspec"
